--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 		<br>
 
-				<img id="bear" src="ASSETS/bear3.jpg" alt="Us" title="The coolest bears around" class="center">
+				<!--<img id="bear" src="ASSETS/bear3.jpg" alt="Us" title="The coolest bears around" class="center">-->
+		<img id="bear" src="https://cdn.discordapp.com/attachments/274766616246616074/1074928226905886771/bear3.jpg" alt="Us" title="The coolest bears around" class="center">
 
 		<br>
 
