--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<br>
 
 				<!--<img id="bear" src="ASSETS/bear3.jpg" alt="Us" title="The coolest bears around" class="center">-->
-		<img id="bear" src="https://cdn.discordapp.com/attachments/274766616246616074/1074928226905886771/bear3.jpg" alt="Us" title="The coolest bears around" class="center">
+				<img id="bear" src="https://cdn.discordapp.com/attachments/274766616246616074/1074928226905886771/bear3.jpg" alt="Us" title="The coolest bears around" class="center">
 
 		<br>
 
@@ -29,7 +29,7 @@
 			<p> I hope you like it as much as I like you. </p>
 
 
-					<p id="dots"> - - - - - - - - - - - - - - - - - - - - - - - - - - - -  </p>
+					<p id="dots"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
 
 
 			 <h2> I know you told me not to buy you stuff but...</h2>
@@ -40,7 +40,9 @@
 
 			 <p>I got you flowers. </p>
 
-			 	<img id="flower" src="ASSETS/Flowers1.png" alt="Flowers" title="Pretty flowers for you" class="center">
+			 	<!--<img id="flower" src="ASSETS/Flowers1.png" alt="Flowers" title="Pretty flowers for you" class="center">-->
+				<img id="flower" src="https://media.discordapp.net/attachments/274766616246616074/1074929204002570360/Flowers1.png?width=497&height=666
+" alt="Flowers" title="Pretty flowers for you" class="center"
 
 		<br>
 		<br>
@@ -52,7 +54,8 @@
 
 			 <p>Some chocolate too. </p>
 
-			 	<img id="chocolate" src="ASSETS/Me1.png" alt="Me" title="Crunch chocolate is good" class="center">
+			 	<!--<img id="chocolate" src="ASSETS/Me1.png" alt="Me" title="Crunch chocolate is good" class="center">-->
+				<img id="chocolate" src="https://media.discordapp.net/attachments/274766616246616074/1074929204614938646/Me1.png" alt="Me" title="Crunch chocolate is good" class="center">
 
 		<br>
 		<br>
@@ -69,23 +72,26 @@
 
 			 <p>And a <b>very cool</b> cat.</p>
 
-			 	<img id="gator" src="ASSETS/Gator1.png" alt="Epic" title="He's very cool" class="center">
+			 	<!--<img id="gator" src="ASSETS/Gator1.png" alt="Epic" title="He's very cool" class="center">-->
+				<img id="gator" src="https://media.discordapp.net/attachments/274766616246616074/1074929204224872568/Gator1.png" alt="Epic" title="He's very cool" class="center">
 
 		<br>
 
-			 		<p id="dots"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
+			 		<p id="dots"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</p>
 
 
 		 	<p> Here's a few of my favorite pictures of us together. </p>
 		 	<p> I think you're cute. ♡</p>
 
-				<img id="us" src="ASSETS/Cool pics.png" alt="Uss" title="Two weirdos" class="center">
+				<!--<img id="us" src="ASSETS/Cool pics.png" alt="Uss" title="Two weirdos" class="center">-->
+				<img id="us" src="https://media.discordapp.net/attachments/274766616246616074/1074929203348262973/Cool_pics.png?width=1111&height=667" alt="Uss" title="Two weirdos" class="center">
 
 
-		 			<p id="dots"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
+		 			<p id="dots"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
 
 
-				<img id="Like" src="ASSETS/ily.png" alt="Usss" title="I stole your blanket" class="center">
+				<!--<img id="Like" src="ASSETS/ily.png" alt="Usss" title="I stole your blanket" class="center">-->
+				<img id="Like" src="https://media.discordapp.net/attachments/274766616246616074/1074929204417794068/ily.png?width=409&height=666" alt="Usss" title="I stole your blanket" class="center">
 
 			 <p> That's all of your gift!</p>
 
@@ -103,7 +109,8 @@
 
 		 	<div style="width:100%;text-align:center;">
 
-		 		<a href="ASSETS/cow.jpg" target="_blank"> p.s. I love you</a> </div>
+		 		<!--<a href="ASSETS/cow.jpg" target="_blank"> p.s. I love you</a> </div>-->
+			<a href=" https://media.discordapp.net/attachments/274766616246616074/1074929203780259860/cow.jpg?width=678&height=666" target="_blank"> p.s. I love you</a> </div>
 
 
 		<br>
